--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1">
-    <meta name="description" content="Localizer ofrece una guia educacional paso a paso para que pueda acceder remotamente a un dispositivo movil, buscar telefono, localizar dispositivo, buscar dispositivos, device find, localizar movil, localizar telefono.">
+    <meta name="description" content="GeoLocator ofrece una guia educacional paso a paso para que pueda acceder remotamente a un dispositivo movil, buscar telefono, localizar dispositivo, buscar dispositivos, device find, localizar movil, localizar telefono.">
         <meta name="format-detection" content="telephone=no">
 
     <!-- CSRF Token -->
@@ -24,7 +24,7 @@
     <meta name="hipay-username" content="94680812.secure-gateway.hipay-tpp.com">
     <meta name="hipay-password" content="Live_kM6n2OoDz7S2CQgWday3x19y">
 
-    <title>Localizer</title>
+    <title>GeoLocator</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://geomy.mobi/img/favicon/apple-icon-60x60.png') }}">
@@ -148,7 +148,7 @@
                     <source media="(min-width: 990px)" srcset="img/logo.png" type="image/webp">
                     <source media="(max-width: 989px)" srcset="img/logo.png" type="image/png">
                     <source media="(min-width: 990px)" srcset="img/logo.png" type="image/png">
-                    <img src="img/logo.png" class="lazyload logo-img" loading="lazy" alt="localizer.online" title="localizer.online">
+                    <img src="img/logo.png" class="lazyload logo-img" loading="lazy" alt="GeoLocator" title="GeoLocator">
                 </picture>
             </a>
             <span class="navbar-toggler">
@@ -345,7 +345,7 @@
 		<div class="columns column-2">
 			<div class="address">
 				<a href="index.htm">
-					<img class="lazyload logo" loading="lazy" src="img/logo.png" width="190" alt="Localizer" title="localizer">
+					<img class="lazyload logo" loading="lazy" src="img/logo.png" width="190" alt="GeoLocator" title="GeoLocator">
 				</a>
 				
 			</div>
