--- a/AvisoLegal.html
+++ b/AvisoLegal.html
@@ -17,7 +17,7 @@
 
 Aviso legal
 </br>
- El contenido entregado por www.ubicar.me está diseñado para un uso legal únicamente.</br>
+ El contenido entregado por GeoLocator está diseñado para un uso legal únicamente.</br>
  Es  material educacional conjunto a un software de monitoreo de smartphones y tabletas que se utilizará solo con el objetivo del control parental de sus hijos,</br>
  por parte de los empleadores para monitorear los dispositivos que les pertenecen, </br>
  </br>para vigilar a sus empleados en su casa u empresa, en un dispositivo de su propiedad,</br>
@@ -50,7 +50,7 @@ Aviso legal
 
 <p style="text-align: justify"><strong>Todas las marcas registradas son propiedad de sus respectivos propietarios. </strong></p>
 
-<p style="text-align: justify"><strong>© 2021 www.ubicar.me</strong></p>			
+<p style="text-align: justify"><strong>© 2023 GeoLocator</strong></p>			
 			<div class="clear"></div>
 		</div>
 	</div>
